#154 : Bump to Boot 3.0.6